--- a/res/values/purenexus_bools.xml
+++ b/res/values/purenexus_bools.xml
@@ -18,6 +18,8 @@
     <bool name="def_battery_light_enabled">true</bool>
     <!-- Default value for battery light pulse -->
     <bool name="def_battery_light_pulse">true</bool>
+    <!-- Default value for battery light do not disturb -->
+    <bool name="def_battery_light_dnd">true</bool>
     <!-- ColorPicker -->
     <bool name="showFullColorPickSummary">true</bool>
 </resources>
