--- a/res/values/purenexus_strings.xml
+++ b/res/values/purenexus_strings.xml
@@ -72,6 +72,8 @@
     <string name="notification_light_no_apps_summary">To add per app control, activate \'%1$s\' and press \'\u002b\' on the menu bar</string>
     <string name="allow_lights_title">Lights in do not disturb mode</string>
     <string name="notification_light_screen_on">Lights with screen on</string>
+    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
+
     <!-- Three finger swipe screenshot -->
     <string name="three_finger_gesture">Three finger screenshot</string>
     <string name="three_finger_gesture_summary">Swipe three fingers across the screen to screenshot</string>
